--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,13 @@
     </build>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.36</version>
+            <scope>provided</scope>
+        </dependency>
         <!-- AWS CDK -->
         <dependency>
             <groupId>software.amazon.awscdk</groupId>
